tests/ui/async-await/async-closures/suggest-async-block-issue-140265.stderr
error[E0277]: `{async closure@$DIR/suggest-async-block-issue-140265.rs:10:18: 10:26}` is not a future
  --> $DIR/suggest-async-block-issue-140265.rs:10:18
   |
LL |       takes_future(async || {
   |  _____------------_^
   | |     |
   | |     required by a bound introduced by this call
LL | |
LL | |         println!("hi!");
LL | |     });
   | |_____^ `{async closure@$DIR/suggest-async-block-issue-140265.rs:10:18: 10:26}` is not a future
   |
   = help: the trait `Future` is not implemented for `{async closure@$DIR/suggest-async-block-issue-140265.rs:10:18: 10:26}`
note: required by a bound in `takes_future`
  --> $DIR/suggest-async-block-issue-140265.rs:6:28
   |
LL | fn takes_future(_fut: impl Future<Output = ()>) {}
   |                            ^^^^^^^^^^^^^^^^^^^ required by this bound in `takes_future`
help: use `async {}` instead of `async || {}` to introduce an async block
   |
LL -     takes_future(async || {
LL +     takes_future(async {
   |

error[E0277]: `{async closure@$DIR/suggest-async-block-issue-140265.rs:16:18: 16:25}` is not a future
  --> $DIR/suggest-async-block-issue-140265.rs:16:18
   |
LL |       takes_future(async||{
   |  _____------------_^
   | |     |
   | |     required by a bound introduced by this call
LL | |
LL | |         println!("no space!");
LL | |     });
   | |_____^ `{async closure@$DIR/suggest-async-block-issue-140265.rs:16:18: 16:25}` is not a future
   |
   = help: the trait `Future` is not implemented for `{async closure@$DIR/suggest-async-block-issue-140265.rs:16:18: 16:25}`
note: required by a bound in `takes_future`
  --> $DIR/suggest-async-block-issue-140265.rs:6:28
   |
LL | fn takes_future(_fut: impl Future<Output = ()>) {}
   |                            ^^^^^^^^^^^^^^^^^^^ required by this bound in `takes_future`
help: use `async {}` instead of `async || {}` to introduce an async block
   |
LL -     takes_future(async||{
LL +     takes_future(async{
   |

error[E0277]: `{async closure@$DIR/suggest-async-block-issue-140265.rs:22:18: 22:32}` is not a future
  --> $DIR/suggest-async-block-issue-140265.rs:22:18
   |
LL |       takes_future(async |x: i32| {
   |  _____------------_^
   | |     |
   | |     required by a bound introduced by this call
LL | |
LL | |         println!("{x}");
LL | |     });
   | |_____^ `{async closure@$DIR/suggest-async-block-issue-140265.rs:22:18: 22:32}` is not a future
   |
   = help: the trait `Future` is not implemented for `{async closure@$DIR/suggest-async-block-issue-140265.rs:22:18: 22:32}`
note: required by a bound in `takes_future`
  --> $DIR/suggest-async-block-issue-140265.rs:6:28
   |
LL | fn takes_future(_fut: impl Future<Output = ()>) {}
   |                            ^^^^^^^^^^^^^^^^^^^ required by this bound in `takes_future`
help: use parentheses to call this closure
   |
LL |     }(/* i32 */));
   |      +++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
